css/main.css
:root {
    --color-strong: #CC3927;
    --color-tame: #F6EADA;
    --color-black: #18130E;
}

body {
    background-color: var(--color-tame);
    margin: 0;
    padding: 50px 25px 25px 25px;
}
a {
    color:var(--color-strong)
}
.main__summary, .main__details {
    height: auto;
}

.main__summary {
    background: var(--color-strong);
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex: 1;
    flex-wrap: wrap;
    padding: 4rem 0rem 2rem 4rem;
}

.welcome {
    margin-top: 15vh;
    margin-bottom: 30vh;
    max-width: 75%;
}

.welcome__heading {
    color: var(--color-tame);
    position: relative;
    font-family: 'Space Grotesk', sans-serif;
    font-size: 3rem;
    font-weight: bold;
    margin-bottom: 1.5rem;
}

.welcome__heading::after {
    content: '';
    position: absolute;
    width: 70vw;
    height: 65vw;
    background: var(--color-tame);
    z-index: 0;
    opacity: .1;
    border-radius: 47%;
    transform:rotate(12deg);
    left: -25vw;
    top: -25vw;
    pointer-events: none;
}

.welcome__text {
    color: var(--color-tame);
    font-family: 'Space Grotesk', sans-serif;
    font-weight: lighter;
    font-size: 1.2rem;
    line-height: 1.4;
}

nav {
    font-family: 'Space Mono', sans-serif;
    position: relative;
}

nav a {
    color: var(--color-tame);
    text-decoration: none;
    font-weight: lighter;
}

nav a:not(:last-of-type)::after {
    content: "/";
    margin: 0 0.5rem;
}

nav a.active {
    text-transform: uppercase;
    font-weight: bold;
}

.main__details::-webkit-scrollbar {
    width: 5px;
}

.main__details::-webkit-scrollbar-thumb {
    background: var(--color-strong);
    border-radius: 20px;
}

.main__details::-webkit-scrollbar-track {
    background: rgba(0, 0, 0, .1);
}

.logo {
    background: var(--color-tame);
    border: solid 2px var(--color-strong);
    text-align: right;
    font-family: 'Space Mono', sans-serif;
    position: absolute;
    right: 4vw;
    top: 1rem;
    padding: 1rem;
    z-index: 10;
}

.logo__title {
    font-size: 1.5rem;
    margin-bottom: .4rem;
    display: block;
    color: var(--color-strong);
    text-decoration: none;
}

.logo__tagline {
    font-size: 1rem;
    color: var(--color-strong);
    display: block;
}

.section-page {
    min-height: 90vh;
    margin-bottom: 1rem;
    padding:1rem 2rem;
}

.section__heading {
    font-family: 'Space Grotesk', sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    font-size: 2.5rem;
    color: var(--color-strong);
    padding-top: 10vh;
    text-shadow: 4px 3px 0px var(--color-tame);
    position:relative;
    text-align:center;
}

.section__heading span {
    display: block;
}
.section__lead {
    font-size:1.5rem;
    text-align:center;
    color:var(--color-black);
    font-family: 'Space Grotesk', sans-serif;
    font-weight:ligher;
    line-height:1.5;
    margin-top:2rem;
}
.section__copy {
    color:var(--color-black);
    text-align:center;
    font-family: 'Space Grotesk', sans-serif;
    font-weight:ligher;
    line-height:1.5;
    margin-top:3rem;
}
/* list items */

.list {
    margin: 4rem auto auto auto;
    width: 80%;
}

.list-item {
    border-top: solid 1px var(--color-strong);
    padding: 1rem 1rem 1rem 1rem;
}

.list-item:last-of-type {
    border-bottom: solid 1px var(--color-strong);
}

.list-item__category {
    text-transform: uppercase;
    font-family: 'Space Grotesk', sans-serif;
    font-size: .8rem;
    letter-spacing: 3px;
    font-weight: lighter;
    margin-bottom: .3rem;
    color: var(--color-black);
}

.list-item__title {
    font-family: 'Space Grotesk', sans-serif;
    font-weight: bold;
    font-size: 1.7rem;
    color: var(--color-black);
}

.list-item__link {
    font-family: 'Space Grotesk', sans-serif;
    color: var(--color-black);
    text-decoration: none;
}

/* list, resume modifier */
.list--experience {
    margin:2rem auto auto auto;
}
.list--experience .list-item {
    border: none;
    padding: 1rem 0rem 2rem 2rem;
    position: relative;
}

.list--experience .list-item::before {
    content: '';
    width: 10px;
    height: 10px;
    background: var(--color-black);
    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%) rotate(45deg);
}

.list--experience .list-item:not(:last-of-type)::after {
    content: '';
    height: 100%;
    width: 1px;
    background: var(--color-black);
    position: absolute;
    left: 5px;
    top: 50%;
}

.link--email {
    position:relative;
}


.card-slider {
    margin-top:1.5rem;
    margin-bottom:5rem;
    cursor:pointer;
    max-width:100%;
}
.card-slider:active {
    cursor:grabbing;
}
.card {
    width:300px;
    
}
.card figure {
    background: var(--color-tame);
    background:white;
    border:solid 5px white;
    object-fit:cover;
}
.card figcaption {
    padding:.5rem;
    font-family: 'Space Mono', sans-serif;
    font-size:.6rem;
    line-height:1.5;
}
.card img,
.card video {
width:100%;
height:100%;
}
/* media queries */

@media(min-width:768px) {
    body {
        /* overflow:hidden; */
    }
    .main-content {
        display: grid;
        grid-template-rows: 1fr;
        grid-template-columns: 1fr 1fr;
    }
    .main__summary, .main__details {
        
        border: solid 3px var(--color-strong);
    }
    .main__summary {
        height: calc(88vh - 6rem);
    }
    .main__details {
        overflow-y: scroll;
        height: 88vh;
        scroll-behavior: smooth;
    }

    .list-item {
        display:flex;
        flex-wrap:wrap;
        justify-content:space-between;
    }
    .list-item__category,
    .list-item__title {
        flex-basis:80%;
    }
}

